feat(docs):swgger fix swgger docs and add x-api-header to generate single use token
