# internal/handler/auth_handler.go
@@ -74,7 +74,7 @@ func (h *AuthHandler) LoginWithNoAuth(c *gin.Context) {
 // @Tags         auth
 // @Accept       json
 // @Produce      json
-// @Param        payload  body      dto.SigupWithPasswordDTO  true  "Signup credentials"
+// @Param        payload  body      dto.SignUpWithPasswordDTO  true  "Signup credentials"
 // @Success      201      {object}  dto.IDResponse[int64]
 // @Failure      400      {object}  errx.APIError
 // @Failure      500      {object}  errx.APIError
@@ -86,7 +86,6 @@ func (h *AuthHandler) SignUpWithPassword(c *gin.Context) {
 		c.JSON(appErr.HTTPStatus, appErr)
 		return
 	}
-
 	// create user
 	user, err := h.Repo.CreateUserWithPassword(c.Request.Context(), credential)
 	if err != nil {
@@ -156,8 +155,9 @@ func (h *AuthHandler) LoginWithPassword(c *gin.Context) {
 // @Tags         auth
 // @Accept       json
 // @Produce      json
-// @Param        payload  body      dto.GenerateOneTimeTokenDTO  true  "Username"
-// @Success      200      {object}  dto.OneTimeTokenResponseDTO
+// @Param 			 x-api-key header string true "API Key"
+// @Param        payload  body      dto.GenerateSingleUseTokenDTO true  "Username"
+// @Success      200      {object}  dto.SingleUseTokenResponseDTO
 // @Failure      400      {object}  errx.APIError
 // @Failure      500      {object}  errx.APIError
 // @Router       /auth/GetSingleUseToken/ [post]
